resilio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resilio
spec:
  finalizers:
  - kubernetes
