resilio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resilio
    kubernetes.io/name: resilio
  name: resilio
  namespace: resilio
spec:
  ports:
  - name: web
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: resilio
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resilio
    kubernetes.io/name: resiliodata
  name: resiliodata
  namespace: resilio
spec:
  ports:
  - name: syncdata
    port: 55555
    targetPort: 55555
  selector:
    app: resilio
  sessionAffinity: None
  type: NodePort
